--- a/2-DO-main/templates/register.html
+++ b/2-DO-main/templates/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Registration Form</title>
+<head>Registration Form</head>
 <div class="registerdiv">
     <form method="POST">
           <div class="form-details">
