--- a/2-DO-main/templates/index.html
+++ b/2-DO-main/templates/index.html
@@ -2,4 +2,5 @@
 <html lang="en">
 <title>Form</title>
 <li class="col-sm-6"><a href="/register">Register</a></li>
+<li class="col-sm-6"><a href="/login">Login</a></li>
 </html>
