--- a/Website Code/website/templates/home.html
+++ b/Website Code/website/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
     <h1 align="center">Welcome {{ user.first_name }}, User ID: {{ user.id }}</h1>
-    <h1 align="center">Incidents</h1>
+    <h1 align="center">Tasks</h1>
     <hr>
     <ul class="list-group list-group-flush" id="tasks">
       {% for task in user.tasks %}
@@ -34,12 +34,49 @@
       </li>
       {% endfor %}
     </ul>
-    <h3>Add Comments About An Incident: </h3>
+    <h3>Add Information About Your Task: </h3>
     <form method="POST">
-      <textarea name="task" id="task" class="form-control"></textarea>
+      <h1>Task</h1>
+<!--       <textarea name="task" id="task" class="form-control"></textarea>
       <br />
-      <div align="center">
-        <button type="submit" class="btn btn-primary">Add Incident</button>
+      <div>
+        <button type="submit" class="btn btn-primary">Title</button>
+      </div> -->
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title" name="title" placeholder="Add a Title" />
       </div>
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea type="text" class="form-control" id="description" name="description" placeholder="Add a Description"></textarea>
+      </div>
+      <!--  WOULD POSSIBLY NEED TO CHANGE FROM FORMAT IN DATABASE to HH:MM from current HH:MM:SS.ssss, CAN CHECK IF THE CURRENT IMPLEMENTATION WORKS -->
+      <div class="form-group">
+        <label for="time">Select Time (HH:MM)</label>
+        <input type="time" class="form-control" id="time" name="time" step="60">
+      </div>
+      <div class="form-group">
+        <label for="date">Select a Date (YYYY-MM-DD)</label>
+        <input type="date" class="form-control" id="date" name="date" placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}">
+      </div>
+
+      <div class="form-group">
+        <label for="tag">Tag</label>
+        <input type="text" class="form-control" id="tag" name="tag" placeholder="#..." />
+      </div>
+      <!-- NEED TO CHANGE THIS TO ONLY HAVE 'Low', 'Medium', 'High' OPTIONS
+      MAYBE JUST A DIAL OR RADIO BUTTONS (WHICH SUCK)-->
+      <div class="form-group">
+        <label for="priority">Priority</label>
+        <select class="form-control" id="priority" name="priority">
+          <option value="Low">Low</option>
+          <option value="Medium">Medium</option>
+          <option value="High">High</option>
+        </select>
+      </div>
+
+    <div>
+      <button type="submit" class="btn btn-primary">Add Task</button>
+    </div>
     </form>
     {% endblock %}
