--- a/Website Code/website/templates/home.html
+++ b/Website Code/website/templates/home.html
@@ -9,8 +9,7 @@
         <table>
           <tr>
             <th>ID </th>
-            <th>Date </th>
-            <th>Time </th>
+            <th>Date and Time </th>
             <th>Title </th>
             <th>Description </th>
             <th>Tag </th>
@@ -20,7 +19,6 @@
           <tr>
             <td>{{ task.id }}</td>
             <td>{{ task.due_date}}</td>
-            <td>{{ task.due_time}}</td>
             <td>{{ task.title }}</td>
             <td>{{ task.description }}</td>
             <td>{{ task.tag }}</td>
@@ -52,12 +50,8 @@
       </div>
       <!--  WOULD POSSIBLY NEED TO CHANGE FROM FORMAT IN DATABASE to HH:MM from current HH:MM:SS.ssss, CAN CHECK IF THE CURRENT IMPLEMENTATION WORKS -->
       <div class="form-group">
-        <label for="time">Select Time (HH:MM)</label>
-        <input type="time" class="form-control" id="time" name="time" step="60">
-      </div>
-      <div class="form-group">
-        <label for="date">Select a Date (YYYY-MM-DD)</label>
-        <input type="date" class="form-control" id="date" name="date" placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}">
+        <label for="date">Select a Date (YYYY-MM-DD) and Time (HH:MM)</label>
+        <input type="datetime-local" class="form-control" id="date" name="date" >
       </div>
 
       <div class="form-group">
