Filter Search Bar, Edit Form, Additional Testing
New:
- Added a search bar where you can filter and search each column
- The edit form now populates the current data of the task in the entry forms
- Testing was sorted according to the test code in the docs
- Added a test for sorting all the column data

Need to fix:
-  Need to customize the search bar for priority and check if status is being filtered appropriately
- Add a way to sort more than just by the current ascending
- Add a manual check for status, if completed, have the status box be checked
- Replace "Delete Task" and "Edit Task" buttons with icons to make it look nicer
- Add a calendar with the tasks [date & time is in this format: "YYYY-MM-DD HH:MM" (stored as VARCHAR(40) in database)]
- Add additional testing for new features

--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -6,6 +6,21 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <h1 align="center">Tasks</h1>
 <hr>
+
+<!-- SEARCH BAR -->
+<div class="search-container">
+  <label for="columnSelect">Search in Column:</label>
+  <select id="columnSelect" onchange="changeSearchColumn()">
+    <option value="title">Title</option>
+    <option value="description">Description</option>
+    <option value="tag">Tag</option>
+    <option value="priority">Priority</option>
+    <option value="status">Status</option>
+  </select>
+  <input type="text" id="taskSearch" placeholder="Search for tasks..." onkeyup="searchTasks()">
+</div>
+<br>
+
 <ul class="list-group list-group-flush" id="tasks">
   <table class="searchable sortable" id="task-table">
     <thead>
@@ -82,6 +97,7 @@
   <div>
     <button type="submit" class="btn btn-primary">Add Task</button>
   </div>
+  <br>
 </form>
 
 <script>
@@ -122,7 +138,7 @@
   }
 }
 </script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+
 <script>
 //Checkbox is checked if task is complete. Bool value and task id get passed to Flask to update bool in db
 function checkComplete(t)
@@ -138,9 +154,6 @@ function checkComplete(t)
   xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
   //passes data as dict
   xmlhttp.send(JSON.stringify({'task':t,'bool':bool}));
-
-
-
   /*
   $.ajax({
     url:"/complete_task/",
@@ -159,11 +172,6 @@ function checkComplete(t)
   //task_id=checkbox.toString()
 
   //console.log(task_id)
-
-
-
-
-
  
   /*
   if (checkbox.checked == true)
@@ -175,13 +183,50 @@ function checkComplete(t)
   alert('task '+ t + ' incomplete');
   }
   */
-  
-
-  
-  
 }
 </script>
 
+<script>
+  // Your sortTable function here
+
+  var searchColumn = "title"; // Default search column
+
+  function changeSearchColumn() {
+    var columnSelect = document.getElementById("columnSelect");
+    searchColumn = columnSelect.options[columnSelect.selectedIndex].value;
+    searchTasks();
+  }
+
+  function searchTasks() {
+    var input, filter, table, tr, td, i, txtValue;
+    input = document.getElementById("taskSearch");
+    filter = input.value.toUpperCase();
+    table = document.getElementById("task-table");
+    tr = table.getElementsByTagName("tr");
+
+    for (i = 0; i < tr.length; i++) {
+      td = tr[i].getElementsByTagName("td")[2]; // Index 2 is the Title column, adjust it as needed
+      if (searchColumn === "description") {
+        td = tr[i].getElementsByTagName("td")[3]; // Index 3 is the Description column
+      } else if (searchColumn === "tag") {
+        td = tr[i].getElementsByTagName("td")[4]; // Index 4 is the Tag column
+      } else if (searchColumn === "priority") {
+        td = tr[i].getElementsByTagName("td")[5]; // Index 5 is the Priority column
+      } else if (searchColumn === "status") {
+        td = tr[i].getElementsByTagName("td")[6]; // Index 6 is the Status column
+      }
+
+      if (td) {
+        txtValue = td.textContent || td.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          tr[i].style.display = "";
+        } else {
+          tr[i].style.display = "none";
+        }
+      }
+    }
+  }
+</script>
 
 
 
