--- a/2-DO-main/Website Code/website/templates/editform.html
+++ b/2-DO-main/Website Code/website/templates/editform.html
@@ -11,8 +11,8 @@
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea class="form-control" id="description" name="description"
-      placeholder="Add a Description">{{ task.description }}</textarea>
+    <input  type="text" class="form-control" id="description" name="description"
+      placeholder="Add a Description" value="{{ task.description }}">
   </div>
   <!-- Make sure to format the date correctly, the same format as the original -->
   <div class="form-group">
