--- a/2-DO-main/Website Code/website/templates/base.html
+++ b/2-DO-main/Website Code/website/templates/base.html
@@ -35,6 +35,7 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
+                    <a class="nav-item nav-link" id="help" href="/help">Help</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Log Out</a>
                     {% else %}
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
