Testing of Search Function
- Completed testing of search function (Title, Desc, Tag, Priority)

--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -10,7 +10,7 @@
 <!-- SEARCH BAR -->
 <div class="search-container">
   <label for="columnSelect">Search in Column:</label>
-  <select id="columnSelect" onchange="changeSearchColumn()">
+  <select id="columnSelect" name="columnSelect" onchange="changeSearchColumn()">
     <option value="title">Title</option>
     <option value="description">Description</option>
     <option value="tag">Tag</option>
