--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
+<script src="{{ url_for('static', filename='home.js') }}"></script>
 
 <h1 align="center">Welcome {{ user.first_name }}, User ID: {{ user.id }}</h1>
 
@@ -34,6 +35,7 @@
         <th><a href="javascript:sortTable(4)">Tag</a></th>
         <th><a href="javascript:sortTable(5)">Priority</a></th>
         <th><a href="javascript:sortTable(6)">Status</a></th>
+        <th>Reminder Time</th>
         <th></th>
       </tr>
     </thead>
@@ -59,12 +61,14 @@
               onclick="checkComplete('{{ task.id }}')" >
             {% endif %}
         </td>
+        <td>{{ task.reminder_time }}</td>
 
         <td><a href="{{ url_for('views.delete_task', t=task.id) }}"
             onclick="return confirm('Do you want to permanently delete task {{ task.id }}?');"
             title="Delete Task">Delete Task</a>
         </td>
         <td><a href="/editform?taskid={{ task.id }}">Edit Task</a></td>
+        <td><button onclick="scheduleNotification('{{ task.id }}')">Notification</button></td>
       </tr>
 <!--       <tr>
         <td>&nbsp;</td>
@@ -94,7 +98,7 @@
       placeholder="Add a Description"></textarea>
   </div>
   <div class="form-group">
-    <label for="date">Select a Date (YYYY-MM-DD) and Time (HH:MM)</label>
+    <label for="date">Select a Due Date</label>
     <input type="datetime-local" class="form-control" id="date" name="date">
   </div>
   <div class="form-group">
@@ -109,7 +113,10 @@
       <option value="High">High</option>
     </select>
   </div>
-
+  <div class="form-group">
+    <label for="reminder_time">Set a Reminder Time</label>
+    <input type="datetime-local" class="form-control" id="reminder_time" name="reminder_time">
+  </div>
   <div>
     <button type="submit" class="btn btn-primary">Add Task</button>
   </div>
@@ -155,179 +162,8 @@
 }
 </script> -->
 <!-- THIS IS A TEMP CHANGE FOR SORTING -->
-<script>
-  // Store the current sorting direction for each column
-  var sortDirections = Array(7).fill(1); // 1 for ascending, -1 for descending
-
-  function sortTable(num) {
-      var table, rows, switching, i, x, y, shouldSwitch;
-      table = document.getElementById("task-table");
-      switching = true;
-      sortDirections[num] *= -1;
-
-      while (switching) {
-        switching = false;
-        rows = table.rows;
-
-        for (i = 1; i < (rows.length - 1); i++) {
-          shouldSwitch = false;
-          x = rows[i].getElementsByTagName("TD")[num];
-          y = rows[i + 1].getElementsByTagName("TD")[num];
-
-          if (num == 0 || num == 1) {
-            var xValue = Number(x.innerHTML);
-            var yValue = Number(y.innerHTML);
-          } else if (num == 5) {
-            var xValue = getPriorityValue(x.innerHTML);
-            var yValue = getPriorityValue(y.innerHTML);
-          } else if (num == 6) {
-            // Column 6 (Status): Custom sorting based on incomplete/complete
-            var xValue = getStatusValue(x.firstChild);
-            var yValue = getStatusValue(y.firstChild);
-          } else {
-            var xValue = x.innerHTML.toLowerCase();
-            var yValue = y.innerHTML.toLowerCase();
-          }
-
-          // Custom sorting for the "Status" column
-          if (xValue === yValue) {
-            continue;
-          } else if (xValue < yValue) {
-            if (sortDirections[num] === 1) {
-              shouldSwitch = true;
-              break;
-            }
-          } else {
-            if (sortDirections[num] === -1) {
-              shouldSwitch = true;
-              break;
-            }
-          }
-        }
-
-        if (shouldSwitch) {
-          rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-          switching = true;
-        }
-      }
-    }
-
-    function getStatusValue(checkbox) {
-      // Custom sorting for "Status" column
-      return checkbox.value === "True" ? 1 : 0; // 1 for complete (True), 0 for incomplete (False)
-    }
 
 
-
-  // Helper function to convert priority text to sortable value
-  function getPriorityValue(priority) {
-    switch (priority) {
-      case "Low":
-        return 1;
-      case "Medium":
-        return 2;
-      case "High":
-        return 3;
-      default:
-        return 0; // Handle other cases if necessary
-    }
-  }
-
-</script>
-
-
-<script>
-//Checkbox is checked if task is complete. Bool value and task id get passed to Flask to update bool in db
-function checkComplete(t)
-{ 
-//grabs checkbox
-  checkbox = document.getElementById(t)
-  // True if checkbox is checked, false if checkbox is not checked
-  var bool= checkbox.checked
-  var xmlhttp = new XMLHttpRequest();   // new HttpRequest instance 
-  //where we pass data in views.py
-  var theUrl = "/complete_task/";
-  xmlhttp.open("POST", theUrl);
-  xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-  //passes data as dict
-  xmlhttp.send(JSON.stringify({'task':t,'bool':bool}));
-  /*
-  $.ajax({
-    url:"/complete_task/",
-    type:"POST",
-    contentType:"application/json",
-    data:JSON.stringify(data_dict)
-  });
-  */
-
-  //request.open('POST','/complete_task/${JSON.stringify(task_num)}')
- // request.send();
-  //console.log(data_dict)
- // alert(data_dict)
-
-  //status_data={'taskid':t,'complete_val':bool}
-  //task_id=checkbox.toString()
-
-  //console.log(task_id)
- 
-  /*
-  if (checkbox.checked == true)
-  {
-    alert('task '+ t + ' complete');
-    //alert(checkbox.checked)
-  }
-  else{
-  alert('task '+ t + ' incomplete');
-  }
-  */
-}
-  function showHelpPage() {
-    // Redirect the user to the help page URL
-    window.location.href = "/help";  // Replace "/help" with your actual help page URL
-  }
-
-</script>
-
-<script>
-
-  var searchColumn = "title"; // Default search column
-
-  function changeSearchColumn() {
-    var columnSelect = document.getElementById("columnSelect");
-    searchColumn = columnSelect.options[columnSelect.selectedIndex].value;
-    searchTasks();
-  }
-
-  function searchTasks() {
-    var input, filter, table, tr, td, i, txtValue;
-    input = document.getElementById("taskSearch");
-    filter = input.value.toUpperCase();
-    table = document.getElementById("task-table");
-    tr = table.getElementsByTagName("tr");
-
-    for (i = 0; i < tr.length; i++) {
-      td = tr[i].getElementsByTagName("td")[2]; // Index 2 is the Title column, adjust it as needed
-      if (searchColumn === "description") {
-        td = tr[i].getElementsByTagName("td")[3]; // Index 3 is the Description column
-      } else if (searchColumn === "tag") {
-        td = tr[i].getElementsByTagName("td")[4]; // Index 4 is the Tag column
-      } else if (searchColumn === "priority") {
-        td = tr[i].getElementsByTagName("td")[5]; // Index 5 is the Priority column
-      } else if (searchColumn === "status") {
-        td = tr[i].getElementsByTagName("td")[6]; // Index 6 is the Status column
-      }
-
-      if (td) {
-        txtValue = td.textContent || td.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-          tr[i].style.display = "";
-        } else {
-          tr[i].style.display = "none";
-        }
-      }
-    }
-  }
-</script>
 
 
 
