--- a/2-DO-main/Website Code/website/templates/editform.html
+++ b/2-DO-main/Website Code/website/templates/editform.html
@@ -16,7 +16,7 @@
   </div>
   <!-- Make sure to format the date correctly, the same format as the original -->
   <div class="form-group">
-    <label for="date">Select a Date (YYYY-MM-DD) and Time (HH:MM)</label>
+    <label for="date">Set a Due Date</label>
     <input type="datetime-local" class="form-control" id="date" name="date" value="{{ task.due_date }}">
   </div>
   <div class="form-group">
@@ -30,6 +30,10 @@
       <option value="Medium" {% if task.priority=='Medium' %}selected{% endif %}>Medium</option>
       <option value="High" {% if task.priority=='High' %}selected{% endif %}>High</option>
     </select>
+  </div>
+  <div class="form-group">
+    <label for="reminder_time">Set a Due Date</label>
+    <input type="datetime-local" class="form-control" id="reminder_time" name="reminder_time" value="{{ task.reminder_time}}">
   </div>
 
   <div>
