--- a/2-DO-main/Website Code/website/templates/editform.html
+++ b/2-DO-main/Website Code/website/templates/editform.html
@@ -32,7 +32,7 @@
     </select>
   </div>
   <div class="form-group">
-    <label for="reminder_time">Set a Reminder</label>
+    <label for="reminder_time">Set a Due Date</label>
     <input type="datetime-local" class="form-control" id="reminder_time" name="reminder_time" value="{{ task.reminder_time}}">
   </div>
 
