--- a/2-DO-main/Website Code/website/templates/base.html
+++ b/2-DO-main/Website Code/website/templates/base.html
@@ -13,11 +13,13 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
         />-->
-        <!--<link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            crossorigin="anonymous"
-        />-->
+        <!-- Add this in the <head> section of your HTML -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        
+        crossorigin="anonymous">
+
+
+
 
         <title>{% block title %}Home{% endblock %}</title>
     </head>
