--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -17,7 +17,7 @@
     <option value="priority">Priority</option>
     <!--<option value="status">Status</option>--> <!-- Will fix this for later-->
   </select>
-  <input type="text" id="taskSearch" placeholder="Search for tasks..." onkeyup="searchTasks('task-table1')">
+  <input type="text" id="taskSearch1" placeholder="Search for tasks..." onkeyup="searchTasks('task-table1', 'taskSearch1')">
 </div>
 <!--<button id="helpButton" class="btn btn-primary" onclick="showHelpPage()">Help</button>-->
 <br>
@@ -97,7 +97,7 @@
       <option value="priority">Priority</option>
       <!--<option value="status">Status</option>--> <!-- Will fix this for later-->
     </select>
-    <input type="text" id="taskSearch" placeholder="Search for tasks..." onkeyup="searchTasks('task-table2')">
+    <input type="text" id="taskSearch2" placeholder="Search for tasks..." onkeyup="searchTasks('task-table2', 'taskSearch2')">
   </div>
   <!--<button id="helpButton" class="btn btn-primary" onclick="showHelpPage()">Help</button>-->
   <div id="complete-tasks">
