--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
 <script src="{{ url_for('static', filename='home.js') }}"></script>
 <div id="notification-container"></div>
-
 <h1 align="center">Welcome {{ user.first_name }}, User ID: {{ user.id }}</h1>
-
 <h1 align="center">Tasks</h1>
 <hr>
-
 <!-- SEARCH BAR -->
 <div class="search-container">
   <label for="columnSelect">Search in Column:</label>
@@ -17,74 +14,70 @@
     <option value="priority">Priority</option>
     <!--<option value="status">Status</option>--> <!-- Will fix this for later-->
   </select>
-  <input type="text" id="taskSearch1" placeholder="Search for tasks..." onkeyup="searchTasks('task-table1', 'taskSearch1')">
+  <input type="text" id="taskSearch1" placeholder="Search for tasks..."
+    onkeyup="searchTasks('task-table1', 'taskSearch1')">
 </div>
 <!--<button id="helpButton" class="btn btn-primary" onclick="showHelpPage()">Help</button>-->
 <br>
 <ul class="list-group list-group-flush" id="tasks">
   <div id="incomplete-tasks">
     <h2>Incomplete Tasks</h2>
-  <table class="searchable sortable" id="task-table1">
-    <thead>
-      <tr>
-        <th><a href="javascript:sortTable(0,'task-table1')">ID</a></th>
-        <th><a href="javascript:sortTable(1,'task-table1')">Date and Time</a></th>
-        <th><a href="javascript:sortTable(2,'task-table1')">Title</a></th>
-        <th>Description</th>
-        <th><a href="javascript:sortTable(4,'task-table1')">Tag</a></th>
-        <th><a href="javascript:sortTable(5,'task-table1')">Priority</a></th>
-        <th><a href="javascript:sortTable(6,'task-table1')">Status</a></th>
-        <th>Reminder Time</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for task in user.tasks %}
-      {% if task.status == False %}
-      <tr>
-        <td>{{ task.id }}</td>
-        <td>{{ task.due_date }}</td>
-        <td>{{ task.title }}</td>
-        <td>{{ task.description }}</td>
-        <td>{{ task.tag }}</td>
-        <td>{{ task.priority }}</td>
-        <td>
-          <input type="checkbox" id="{{ task.id }}" class="complete" name="data_{{ task.status }}" value="{{ task.status }}"
-            onclick="checkComplete('{{ task.id }}')" onchange="moveToCompleted(this)">
-        </td>
-        <td>{{ task.reminder_time }}</td>
-
-<!--         <td><a href="{{ url_for('views.delete_task', t=task.id) }}"
-          onclick="return confirm('Do you want to permanently delete task {{ task.id }}?');"
-          title="Delete Task">Delete Task</a>
-      </td>
-      <td><a href="/editform?taskid={{ task.id }}">Edit Task</a></td>
-      <td><button onclick="scheduleNotification('{{ task.id }}')">Notification</button></td> -->
-
-      <td>
-        <a href="{{ url_for('views.delete_task', t=task.id) }}"
-          onclick="return confirm('Do you want to permanently delete task {{ task.id }}?');" title="Delete Task">
-          <i class="fas fa-trash-alt"></i> 
-        </a>
-      </td>
-      
-      <td>
-        <a href="/editform?taskid={{ task.id }}">
-          <i class="fas fa-edit"></i>
-        </a>
-      </td>
-      
-      <td>
-        <a href="#" onclick="scheduleNotification('{{ task.id }}')">
-          <i class="fas fa-bell"></i>
-        </a>
-      </td>
-      
-      </tr>
-      {%endif%}
-      {% endfor %}
-    </tbody>
-  </table>
+    <table class="searchable sortable" id="task-table1">
+      <thead>
+        <tr>
+          <th><a href="javascript:sortTable(0,'task-table1')">ID</a></th>
+          <th><a href="javascript:sortTable(1,'task-table1')">Date and Time</a></th>
+          <th><a href="javascript:sortTable(2,'task-table1')">Title</a></th>
+          <th>Description</th>
+          <th><a href="javascript:sortTable(4,'task-table1')">Tag</a></th>
+          <th><a href="javascript:sortTable(5,'task-table1')">Priority</a></th>
+          <th><a href="javascript:sortTable(6,'task-table1')">Status</a></th>
+          <th>Reminder Time</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for task in user.tasks %}
+        {% if task.status == False %}
+        <tr>
+          <td>{{ task.id }}</td>
+          <td>{{ task.due_date }}</td>
+          <td>{{ task.title }}</td>
+          <td>{{ task.description }}</td>
+          <td>{{ task.tag }}</td>
+          <td>{{ task.priority }}</td>
+          <td>
+            <input type="checkbox" id="{{ task.id }}" class="complete" name="data_{{ task.status }}"
+              value="{{ task.status }}" onclick="checkComplete('{{ task.id }}')" onchange="moveToCompleted(this)">
+          </td>
+          <td>{{ task.reminder_time }}</td>
+          <!--         <td><a href="{{ url_for('views.delete_task', t=task.id) }}"
+                  onclick="return confirm('Do you want to permanently delete task {{ task.id }}?');"
+                  title="Delete Task">Delete Task</a>
+                  </td>
+                  <td><a href="/editform?taskid={{ task.id }}">Edit Task</a></td>
+                  <td><button onclick="scheduleNotification('{{ task.id }}')">Notification</button></td> -->
+          <td>
+            <a href="{{ url_for('views.delete_task', t=task.id) }}"
+              onclick="return confirm('Do you want to permanently delete task {{ task.id }}?');" title="Delete Task">
+              <i class="fas fa-trash-alt"></i>
+            </a>
+          </td>
+          <td>
+            <a href="/editform?taskid={{ task.id }}">
+              <i class="fas fa-edit"></i>
+            </a>
+          </td>
+          <td>
+            <a href="#" onclick="scheduleNotification('{{ task.id }}')">
+              <i class="fas fa-bell"></i>
+            </a>
+          </td>
+        </tr>
+        {%endif%}
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
   <br>
   <!-- SEARCH BAR -->
@@ -97,7 +90,8 @@
       <option value="priority">Priority</option>
       <!--<option value="status">Status</option>--> <!-- Will fix this for later-->
     </select>
-    <input type="text" id="taskSearch2" placeholder="Search for tasks..." onkeyup="searchTasks('task-table2', 'taskSearch2')">
+    <input type="text" id="taskSearch2" placeholder="Search for tasks..."
+      onkeyup="searchTasks('task-table2', 'taskSearch2')">
   </div>
   <!--<button id="helpButton" class="btn btn-primary" onclick="showHelpPage()">Help</button>-->
   <div id="complete-tasks">
@@ -127,31 +121,27 @@
           <td>{{ task.tag }}</td>
           <td>{{ task.priority }}</td>
           <td>
-            <input type="checkbox" id="{{ task.id }}" class="complete" name="data_{{ task.status }}" value="{{ task.status }}"
-              onclick="checkComplete('{{ task.id }}')" checked onchange="moveToIncomplete(this)">
+            <input type="checkbox" id="{{ task.id }}" class="complete" name="data_{{ task.status }}"
+              value="{{ task.status }}" onclick="checkComplete('{{ task.id }}')" checked
+              onchange="moveToIncomplete(this)">
           </td>
           <td>{{ task.reminder_time }}</td>
-
           <td>
             <a href="{{ url_for('views.delete_task', t=task.id) }}"
               onclick="return confirm('Do you want to permanently delete task {{ task.id }}?');" title="Delete Task">
               <i class="fas fa-trash-alt"></i>
             </a>
           </td>
-          
           <td>
             <a href="/editform?taskid={{ task.id }}">
               <i class="fas fa-edit"></i>
             </a>
           </td>
-          
           <td>
             <a href="#" onclick="scheduleNotification('{{ task.id }}')">
               <i class="fas fa-bell"></i>
             </a>
           </td>
-  
-  
         </tr>
         {%endif%}
         {% endfor %}
@@ -161,7 +151,6 @@
 </ul>
 <br><br>
 <a href="{{url_for('views.to_csv')}}">Export to CSV</a>
-
 <h3>Add Information About Your Task: </h3>
 <form method="POST">
   <h1>Task</h1>
@@ -199,50 +188,44 @@
   </div>
   <br>
 </form>
-
 <!--
-<script>
-  /* REFERENCED FROM W3SCHOOLS*/
-
-  function sortTable(num,x) {
-  var table, rows, switching, i, x, y, shouldSwitch;
-  table = document.getElementById(x);
-  switching = true;
-  /* Make a loop that will continue until
-  no switching has been done: */
-  while (switching) {
-    // Start by saying: no switching is done:
-    switching = false;
-    rows = table.rows;
-    /* Loop through all table rows (except the
-    first, which contains table headers): */
-    for (i = 1; i < (rows.length - 1); i++) {
-      // Start by saying there should be no switching:
-      shouldSwitch = false;
-      /* Get the two elements you want to compare,
-      one from current row and one from the next: */
-      x = rows[i].getElementsByTagName("TD")[num];
-      y = rows[i + 1].getElementsByTagName("TD")[num];
-      // Check if the two rows should switch place:
-      if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-        // If so, mark as a switch and break the loop:
-        shouldSwitch = true;
-        break;
-      }
-    }
-    if (shouldSwitch) {
-      /* If a switch has been marked, make the switch
-      and mark that a switch has been done: */
-      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-      switching = true;
-    }
-  }
-}
-</script>-->
+   <script>
+     /* REFERENCED FROM W3SCHOOLS*/
+   
+     function sortTable(num,x) {
+     var table, rows, switching, i, x, y, shouldSwitch;
+     table = document.getElementById(x);
+     switching = true;
+     /* Make a loop that will continue until
+     no switching has been done: */
+     while (switching) {
+       // Start by saying: no switching is done:
+       switching = false;
+       rows = table.rows;
+       /* Loop through all table rows (except the
+       first, which contains table headers): */
+       for (i = 1; i < (rows.length - 1); i++) {
+         // Start by saying there should be no switching:
+         shouldSwitch = false;
+         /* Get the two elements you want to compare,
+         one from current row and one from the next: */
+         x = rows[i].getElementsByTagName("TD")[num];
+         y = rows[i + 1].getElementsByTagName("TD")[num];
+         // Check if the two rows should switch place:
+         if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+           // If so, mark as a switch and break the loop:
+           shouldSwitch = true;
+           break;
+         }
+       }
+       if (shouldSwitch) {
+         /* If a switch has been marked, make the switch
+         and mark that a switch has been done: */
+         rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+         switching = true;
+       }
+     }
+   }
+   </script>-->
 <!-- THIS IS A TEMP CHANGE FOR SORTING -->
-
-
-
-
-
 {% endblock %}
