--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -150,7 +150,7 @@
   </div>
 </ul>
 <br><br>
-<a href="{{url_for('views.to_csv')}}">Export to CSV</a>
+<a href="{{url_for('views.to_csv')}}">Export to Excel</a>
 <h3>Add Information About Your Task: </h3>
 <form method="POST">
   <h1>Task</h1>
