Commented out Date and Time Table Header

--- a/2-DO-main/Website Code/website/templates/home.html
+++ b/2-DO-main/Website Code/website/templates/home.html
@@ -26,7 +26,8 @@
       <thead>
         <tr>
           <th><a href="javascript:sortTable(0,'task-table1')">ID</a></th>
-          <th><a href="javascript:sortTable(1,'task-table1')">Date and Time</a></th>
+          <!-- <th><a href="javascript:sortTable(1,'task-table1')">Date and Time</a></th> -->
+          <th>Date and Time</th>
           <th><a href="javascript:sortTable(2,'task-table1')">Title</a></th>
           <th>Description</th>
           <th><a href="javascript:sortTable(4,'task-table1')">Tag</a></th>
