--- a/2-DO-main/Website Code/website/templates/help.html
+++ b/2-DO-main/Website Code/website/templates/help.html
@@ -2,7 +2,7 @@
 {% block title %}Help{% endblock %}
 {% block content %}
 
-<h1>Help Page</h1>
+<h1>User Help</h1>
 <p>Welcome to the Help Page! This page provides guidance on using the features of our task managing application.</p>
 
 <h2>1. Add a New Task</h2>
@@ -51,8 +51,23 @@
     <li>Click on a checkbox to toggle the status (complete or incomplete).</li>
 </ol>
 
-<h2>6. Help Button</h2>
-<p>The "Help" button on the top-right allows you to access this help page for guidance on using the application.</p>
+<h2>6. Exporting Tasks</h2>
+<p>Users are able to export their tasks into an excel document to take their tasks outside of the application. This allows them to share their tasks with other users in a widely used format. Here is how to export your tasks:</p>
+<ol>
+    <li>Locate the "Export to Excel" button below your task tables and click.</li>
+    <li>Save your downloded .xslx file to a desired location.</li>
+    <li>Open and view the file to see the exported tasks.</li>
+</ol>
+<p>The tasks are split up into three separate sheets.One with all the tasks in a list, one with incomeplete tasks, and one with complete tasks. All tasks have their appropriate data with them.</p>
+
+<h2>Setting a Task Reminder</h2>
+<p>Users are able to set a desktop notification to get notified at a user specified time to remind them of a give task. Here is how to use the reminders:</p>
+<ol>
+    <li>When creating/editing a task, set a reminder time. This time must be past the current time for a reminder to be properly set.</li>
+    <li>Submit the new task information.</li>
+    <li>Click the bell icon next to the remidner time.</li>
+    <li>A desktop notifcation will appear, showing the title and description of the task.</li>
+</ol>
 
 <button id="backButton" class="btn btn-primary" onclick="goBack()">Back</button>
 <br>
